@startuml

entity "chuyen_de" as chuyen_de {
	* ma_so_chuyen_de
	+ ten_chuyen_de
	+ hoc_phi_niem_yet
}

entity "hoc_vien" as hoc_vien {
	* ma_so_hoc_vien
	+ ho_ten
	+ dia_chi
	+ so_dien_thoai_lien_lac
}

entity "phieu_dang_ky" as phieu_dang_ky {
	* ma_so_phieu_dang_ky
	+ ngay_lap_phieu
	+ tong_hoc_phi
}

entity "dang_ky" as dang_ky {
}

hoc_vien |o--|{ phieu_dang_ky

dang_ky |o--|{ phieu_dang_ky

dang_ky |o--|{ chuyen_de

@enduml